--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1,5 +1,29 @@
 bg:
   social:
+    intro page:
+      main heading: "Разговор &amp; откриване"
+      main description: "Изследвайте Библията по нов начин с доверени приятели"
+      moment:
+        timestamp: "преди 5 дена"
+        title: "добави в показалеца Псалм 31:7"
+        verse: "Ще се радвам и ще се веселя в Твоята милост; Защото Ти си видял неволята ми, Познал си утесненията на душата ми."
+        reference: "Псалм 31:7"
+        discover:
+          copy: "Откривайте и учете с приятелите си, когато те добавят акценти, отметки и бележки."
+          button: "Откъде мога да започна?"
+        share:
+          copy: "Споделяйте честни разговори за Писанието."
+          button: "Започнете, като намерите приятели."
+        likes:
+          info: "и още 4 и като това"
+        comments:
+          first:
+            text: "Наистина имах нужда да чуя това днес, благодаря. До скоро!"
+            time: "преди 3 часа"
+          second:
+            text: "Амин, аз също. Сега ви изпращам имейл."
+            time: "преди 27 минути"
+          field placeholder: "Напиши коментар..."
     share: "Сподели"
     my connections: "Свързани профили"
     connected as: "Свързани сте през %{connection} като %{username}."
@@ -34,6 +58,7 @@ bg:
     users username required: "Трябва да въведете потребителско име"
     users first name required: "Трябва да въведете първото си име."
     users last name required: "Трябва да въведете фамилия."
+    moments content required: "Съдържанието не може да бъде празно."
   meta:
     kids_app:
       title: "Приложението Bible за деца"
@@ -141,6 +166,7 @@ bg:
   last page: "Последна страница"
   invalid username or password: "Невалидно потребителско име или парола"
   show all bookmarks: "Виж всички %{total} отбелязани"
+  show all notes: "Виж всички бележки"
   recent bookmarks: "Последни отбелязвания"
   percentage display: "%{number}%"
   myself: "Мен"
@@ -169,6 +195,7 @@ bg:
       like: "Харесай"
       liked: "Харесани"
       like title: "Харесайте това"
+      last comment: "Последен коментар"
       share: "Сподели"
       share title: "Сподели с приятели"
       comment: "Kоментар"
@@ -187,9 +214,18 @@ bg:
     none: "Все още нямате никакви бележки"
     no new: "Няма нови уведомления"
     view all: "Виж всички Съобщения"
+  likes:
+    create success: "Успех! Вашето харесване беше записано"
+    create failure: "Вашето харесване не можа да бъде записано"
+    destroy success: "Харесай изтритото"
+    destroy failure: "Вашето харесване не можа да бъде изтрито"
   comments:
+    view all N: "Разгледай всички %{count} коментари"
     post comment: "Публикувай коментар"
+    create success: "Успех! Вашият коментар беше публикуван."
     create failure: "Коментарът не може да бъде публикуван"
+    destroy success: "Коментарът беше изтрит"
+    destroy failure: "Коментарът не можа да бъде изтрит"
     form:
       save button: "Публикувай на"
   friends:
@@ -203,6 +239,7 @@ bg:
   friendships:
     offer success: "Искането за приятелство е изпратено"
     offer failure: "Грешка при изпращането на искането за приятелство"
+    create success: "Успех! Вече сте приятели."
     create failure: "Грешка при създаване на приятелство"
     destroy success: "Искането беше отказано"
     destroy failure: "Грешка при отказването на искане"
@@ -238,6 +275,7 @@ bg:
     status:
       private: "Личен"
       public: "Публичен"
+      friends: "Само приятели"
       draft: "Чернова"
     list title: "Бележки"
     loading community: "Зареждане на общите бележки..."
@@ -267,6 +305,7 @@ bg:
     cancel: "Откажи"
     pop out: "Нов прозорец"
     none found: "Не са открити бележки..."
+    create success: "Успех! Вашата бележка беше записана."
     create failure: "Грешка при запис на бележка"
     destroy success: "Бележката е изтрита"
     destroy failure: "Грешка при изтриване на бележка"
@@ -345,6 +384,7 @@ bg:
     my badges: "Моите значки"
     revised date: "Последна ревизия на %{date}"
     update email copy: "Въведи нова ел.поща и натисни Обнови ел.поща. Ще получиш линк за потвърждение на новата си ел.поща."
+    edit email: "Промяна на имейл адрес"
     update email check: "Провери си ел.поща и кликни връзката за да потвърдиш новата си ел.поща."
     confirm update email success: "Адресът е актуализиран."
     confirm update email error: "Възникна проблем с промяната на ел.поща."
@@ -496,6 +536,7 @@ bg:
       friendships: "Уведомете ме за молби за приятелство"
       moments: "Уведомете ме за дейността на приятели"
       comments: "Коментари за моята дейност"
+      likes: "Уведоми ме за харесвания на моята дейност"
   bookmarks:
     new: "Ново отбелязване"
     edit: "Редактирай"
@@ -509,6 +550,7 @@ bg:
     not found: "Отбелязването дава бърза препратка към любимите ти пасажи или последната прочетена глава в дадена книга. За да отбележиш, избери стих в Библията и натисни Избран в горната част на екрана."
     other user not found: "%{username} няма запазени отбелязвания"
     creation form errors: "Маркерът не може да бъде създаден заради следните грешки:"
+    create success: "Успех! Вашият показалец беше записан."
     destroy success: "Отбелязването е премахнато"
     destroy failure: "Грешка при изтриване на отметка"
     update success: "Отбелязването е добавено"
@@ -542,6 +584,7 @@ bg:
   plans:
     settings: "Настройки"
     privacy:
+      visible to friends?: "Искате ли вашата дейност с този план да бъде видима за приятелите ви?"
       private: "Личен"
       public: "Публичен"
     title: "План за четене"
@@ -692,11 +735,14 @@ bg:
       description: "Отметките ви помагат да следите стиховете, които искате да запомните, да споделите или да маркирате като предпочитани. Върнете се тук, за да видите, редактирате или изтриете отметки."
     none user: "%{username} няма акценти"
     choose color: "Избери цвят"
+    create success: "Успех! Вашият акцент беше записан"
     create failure: "Грешка при запазване на акцент"
     destroy success: "Акцентът е изтрит"
     destroy failure: "Грешка при изтриване на акцент"
     creation error: "Не може да се подчертае."
     delete error: "Подчертаването не може да се премахне."
+    form:
+      save button: "Запиши акцент"
   searching:
     bible: "Библия"
     plans: "Планове"
@@ -705,6 +751,7 @@ bg:
     total results: "Около %{total} резултата"
     suggestion html: "Може би имахте предвид %{suggestion_link}?"
     all versions: "Всички %{language_name} версии"
+    results for: "Търси резултати за:"
   donate:
     donate now: "Направи дарение"
     donate now intl: "или направи международно дарение"
@@ -907,3 +954,5 @@ bg:
     pagination:
       next page: "Следваща страница"
       previous page: "Предишна страница"
+    datetime:
+      just now: "точно сега"
