--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -34,6 +34,7 @@ km:
     users username required: "លោកអ្នកត្រូវតែបញ្ចូលឈ្មោះអ្នកប្រើប្រាស់ ។"
     users first name required: "អ្នក​ត្រូវ​បញ្ចូល​កោត្ត​នាម"
     users last name required: "អ្នក​ត្រូវ​បញ្ចូល​នាម"
+    moments content required: "មាតិការ​មិន​អាច​ទទេ​រ​បាន​ឡើយ។"
   meta:
     kids_app:
       title: "កម្ម​វិធី​ព្រះ​គម្ពីរ​សម្រាប់​កុមារ"
@@ -65,6 +66,7 @@ km:
   new note: "កំណត់​ត្រាថ្មី"
   share success: "សារ​របស់​លោក​អ្នកត្រូវ​បាន​ចែក​រំលែក"
   share error: "សូមទោស មាន​កំហុស​ក្នុង​ពេល​ចែក​រំលែក​សារ​របស់​អ្នក។ សូម​ព្យាយាមម្ដង​ទៀត"
+  google plus: "Google+"
   connect to: "ភ្ជាប់​គណនី​របស់​អ្នក %{connection}"
   deleted connection: "ការ​ភ្ជាប់​របស់​លោក​អ្នក​ត្រូវ​បាន​ដក​ចេញ​ទៅ %{connection}"
   deleted connection error: "សូម​ទោស មាន​កំហុស​ខ្លះៗ​ក្នុង​ការ​ដក​ចេញ​នូវ​ការ​ភ្ជាប់​របស់​លោក​អ្នក​ទៅ %{connection}"
@@ -140,6 +142,7 @@ km:
   last page: "ទំព័រ​ចុង​ក្រោយ"
   invalid username or password: "ឈ្មោះ​ប្រើ​ប្រាស់ និង​ ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
   show all bookmarks: "មើលកំណត់​ចំណាំ​​ទាំង​អស់ %{total}"
+  show all notes: "មើល​កំណត់​ត្រា​ទាំង​អស់"
   recent bookmarks: "កំណត់​ចំណាំ​ថ្មីៗ"
   percentage display: "%{number}%"
   myself: "ខ្ញុំ"
@@ -168,6 +171,7 @@ km:
       like: "ចូល​ចិត្ត"
       liked: "បាន​ចូល​ចិត្ត"
       like title: "ចូល​ចិត្ត​ នេះ"
+      last comment: "មតិ​ចុង​ក្រោយ"
       share: "ចែក​រំលែក"
       share title: "ចែក​រំលែក​នេះ​ជាមួយ​មិត្ត ឬ​គ្រួសារ"
       comment: "មតិ"
@@ -186,9 +190,18 @@ km:
     none: "អ្នក​មិន​មាន​ការ​តឿន​រំលឹក​ទេ"
     no new: "មិន​មាន​សារ​តឿន​ថ្មី"
     view all: "មើល​ការ​តឿន​ទាំង​អស់"
+  likes:
+    create success: "ជោគ​ជ័យ! ចូល​ចិត្ត របស់​អ្នក​បាន​រក្សា​ទុក"
+    create failure: "ចូល​ចិត្ត របស់​អ្នក​មិន​អាច​រក្សា​ទុក​ឡើយ"
+    destroy success: "ចូល​ចិត្ត​បាន​លុប"
+    destroy failure: "ចូល​ចិត្ត​ របស់​អ្នក​មិន​អាច​លប់​បាន​ឡើយ"
   comments:
+    view all N: "មើលមតិ​ទាំង​អស់​របស់ %{count}"
     post comment: "ផ្សាយ​មតិ"
+    create success: "ជោគ​ជ័យ! មតិ​របស់​អ្នក​បាន​បិទ​ផ្សាយ"
     create failure: "មតិ​មិន​អាច​ផ្សាយ​បាន​ទេ"
+    destroy success: "មតិ​បាន​លុប"
+    destroy failure: "មតិ​មិន​អាច​លុប​បាន​ឡើយ"
     form:
       save button: "ផ្សាយ"
   friends:
@@ -202,6 +215,7 @@ km:
   friendships:
     offer success: "សំណើរ​ជា​មិត្ត​បាន​ផ្ញើរ"
     offer failure: "បញ្ហា​ ក្នុង​ការ​ផ្ញើរ​សំណើរ​ជា​មិត្ត"
+    create success: "ជោគ​ជ័យ! អ្នក​ជា​មិត្ត​ភក្តិ​នឹង​គ្នា​ហើយ"
     create failure: "បញ្ហា បង្កើត​មិត្ត​ភាព"
     destroy success: "សំណើរ​ត្រូវ​បដិសេធ"
     destroy failure: "បញ្ហា បដិសេធ​សំណើរ"
@@ -237,6 +251,7 @@ km:
     status:
       private: "ឯក​ជន"
       public: "សាធារណះ"
+      friends: "ជា​មិត្ត​ ប៉ុណ្ណោះ"
       draft: "សេចក្ដី​ព្រាង"
     list title: "កំណត់​ត្រា"
     loading community: "កំពុង​ទាញ​យក​កំណត់​ត្រា​សហគមន៍"
@@ -266,6 +281,7 @@ km:
     cancel: "បោះ​បង់"
     pop out: "លេច​ចេញ​មក"
     none found: "មិន​មាន​កំណត់​ត្រា​ត្រូវ​បាន​រក​ឃើញ​ឡើយ..."
+    create success: "ជោគ​ជ័យ! កំណត់​ត្រា​របស់​អ្នក​បាន​រក្សា​ទុក"
     create failure: "មាន​បញ្ហា​ពេលរក្សា​កំណត់​ត្រា"
     destroy success: "កំណត់​ត្រា​បាន​លុបចេញ"
     destroy failure: "បញ្ហា ពេល​លុប​កំណត់​ត្រា"
@@ -344,6 +360,7 @@ km:
     my badges: "ផ្លាក​សញ្ញា​របស់​ខ្ញុំ"
     revised date: "កំនែរ​ចុង​ក្រោយ​នៅ​ %{date}"
     update email copy: "បញ្ជូល​អ៊ី​ម៉ែល​ថ្មី ហើយ​ចុច អាប់ឌែត​អ៊ី​ម៉ែល។ យើង​នឹង​ផ្ញើរ​តំណរ​មួយ​ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
+    edit email: "ប្ដូរ អាស័យ​ដ្ឋាន អ៊ី​ម៉ែល"
     update email check: "សូម​ឆែក​អ៊ី​ម៉ែល ហើយ​ចុច​លើ​តំណរ​ភ្ជាប់ ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
     confirm update email success: "អរគុណ! លោក​អ្នក​បាន​អាប់ឌែតនូវ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​ហើយ។"
     confirm update email error: "សូម​ទោស មាន​បញ្ហា​ក្នុង​ការ​បញ្ចប់​ការ​ប្ដូរ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក។"
@@ -496,6 +513,7 @@ km:
       friendships: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​សំណើរ​ពី​មិត្ត​ភក្តិ"
       moments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​អំពី​សកម្ម​ភាព​របស់​មិត្ត"
       comments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​មតិ​លើ​សកម្ម​ភាព​របស់​ខ្ញុំ"
+      likes: "ប្រាប់​ខ្ញុំ​អោយ​ដឹងពី ចូល​ចិត្ត លើ​សកម្ម​ភាព​របស់​ខ្ញុំ"
   bookmarks:
     new: "កំណត់​ចំណាំ​ថ្មី"
     edit: "កែសម្រួល"
@@ -509,6 +527,7 @@ km:
     not found: "កំណត់​ចំណាំ​នឹង​ផ្ដល់​នូវ​សេចក្ដី​យោង​ដោយ​មាន​ភាព​រហ័សទៅកាន់​អ្វី​ដែល​អ្នក​ចូល​ចិត្តឬ​ជំពូក​ចុង​ក្រោយ​ដែល​អ្នក​បាន​អាន​នៅ​ក្នុង​សៀវ​ភៅ។ ដើម្បី​បញ្ចូល​កំណត់​ចំណាំ ជ្រើស​រើស​ខព្រះគម្ពីរ​ក្នុង​កម្ម​វិធី​អានព្រះគម្ពីរ ហើយ​ចុច​លើ​ប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​លើ​នៃ​កម្ម​វិធី​អាន។"
     other user not found: "%{username} មិន​ទាន់​បាន​រក្សាទុក​នូវ​កំណត់​ចំណាំ​ទេ"
     creation form errors: "មាន​កំហុស​ (ច្រើន)​កើត​មាន​ឡើង ក្នុង​ការ​បង្កើត​នូវ​កំណត់​ចំណាំ​របស់​លោក​អ្នក៖"
+    create success: "ជោគ​ជ័យ! កំណត់​ចំណាំ​របស់​អ្នក​បាន​រក្សា​ទុក"
     destroy success: "កំណត់​ចំណាំ​បាន​ដក​ចេញ"
     destroy failure: "មាន​បញ្ហា​ពេល​លុប​កំណត់​ចំណាំ"
     update success: "កំណត់​ចំណាំ​បាន​អាប់​ឌែត"
@@ -542,6 +561,7 @@ km:
   plans:
     settings: "ការ​កំណត់"
     privacy:
+      visible to friends?: "តើ​អ្នក​ចង់​អោយ​ សកម្ម​ភាព​របស់​អ្នក ជាមួយ​នឹង​គំរោង​នេះ អោយ​មិត្ត​ភក្តិ​ឃើញ​ទេ?"
       private: "ឯក​ជន"
       public: "សាធារណះ"
     title: "គំរោង​អាន​"
@@ -692,11 +712,14 @@ km:
       description: "ពេល​អាន​ព្រះ​គម្ពីរ ជ្រើស​រើស​យក​ខគម្ពីរ​ហើយ​គួស​ពណ៌វា។ ត្រប់​មក​ទីនេះ ដើម្បី មើល កែសម្រួល ឬ​លុប​កំណត់​ចំណាំ​របស់​អ្នក"
     none user: "%{username} មិន​មាន​គំនូស​ពណ៌"
     choose color: "ជ្រើស​រើស​ពណ៌"
+    create success: "ជោគ​ជ័យ! គំនូស​ពណ៌​របស់​អ្នក​បាន​រក្សា​ទុក"
     create failure: "មាន​បញ្ហា​លើ​រក្សា​ទុក​គំនូស​ពណ៌"
     destroy success: "គំនូស​ពណ៌​បាន​លុប"
     destroy failure: "មាន​បញ្ហា​ពេល​លុប​គំនូស​ពណ៌"
     creation error: "សូម​ទោស! មិន​អាច​គូស​ចំណាំ​ទេ"
     delete error: "សូម​ទោស មិន​អាចលុប​ការគូស​ចំណាំ​ទេ"
+    form:
+      save button: "រក្សា​ទុក គូស​ចំណាំ"
   searching:
     bible: "ព្រះគម្ពីរ"
     plans: "គំរោង​ច្រើន"
@@ -705,6 +728,7 @@ km:
     total results: "អំពីរ %{total} លទ្ធ​ផល"
     suggestion html: "តើ​លោក​អ្នក​មានន័យថា %{suggestion_link}?"
     all versions: "ជំនាន់​ %{language_name}ទាំងអស់"
+    results for: "លទ្ធ​ផល​ស្វែង​រកៈ"
   donate:
     donate now: "បរិច្ចាក​ឥឡូវ"
     donate now intl: "ឬបរិច្ចាក​ជាលក្ខណះ​អន្តរជាតិ"
@@ -907,3 +931,5 @@ km:
     pagination:
       next page: "ទំព័រ​បន្ទាប់"
       previous page: "ទំព័រ​មុន"
+    datetime:
+      just now: "ទើប​តែ​ឥឡូវ​នេះ"
