--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -1,5 +1,29 @@
 mk:
   social:
+    intro page:
+      main heading: "Разговор и откривање"
+      main description: "Нов начин да се истражи Библијата со пријатели на кои им веруваме"
+      moment:
+        timestamp: "Пред 5 дена"
+        title: "Псалм 31:7 обележан"
+        verse: "Јас ќе се радувам во твојата љубов, затоа што ги виде моите маки, и се грижиш за болката во мојата душа."
+        reference: "Псалм 31:7"
+        discover:
+          copy: "Откриј и учи со твоите пријатели како што тие додаваат нагласувачи, обележувачи и белешки."
+          button: "Каде може да започнам?"
+        share:
+          copy: "Сподели добри разговори за Библијата"
+          button: "Започни со наоѓање на некои пријатели."
+        likes:
+          info: "и на 4 повеќе им се допаѓа ова"
+        comments:
+          first:
+            text: "Навистина ми требаше да го слушнам ова денеска, ти благодарам. Да се видиме наскоро!"
+            time: "Пред 3 часа"
+          second:
+            text: "Амин, и јас исто така. Ти праќам е-пошта сега."
+            time: "пред 27 минути"
+          field placeholder: "Напиши коментар..."
     share: "Сподели"
     my connections: "Поврзани профили"
     connected as: "Поврзан си со %{connection} како %{username}."
@@ -142,6 +166,7 @@ mk:
   last page: "Последна страница"
   invalid username or password: "Погрешно корисничко име или лозинка"
   show all bookmarks: "Види ги сите %{total} обележувања"
+  show all notes: "Види ги сите белешки"
   recent bookmarks: "Неодамнешни обележувања"
   percentage display: "%{number}%"
   myself: "Јас"
@@ -170,6 +195,7 @@ mk:
       like: "Ми се допаѓа"
       liked: "Му/Ѝ се допадна"
       like title: "Ми се допаѓа"
+      last comment: "Последен коментар"
       share: "Сподели"
       share title: "Сподели го ова со твоите пријатели и семејство"
       comment: "Коментар"
@@ -189,12 +215,14 @@ mk:
     no new: "Нема нови известувања"
     view all: "Види ги сите известувања"
   likes:
+    create success: "Успех! Твојот лајк е снимен"
     create failure: "Твоето ми се допаѓа не може да биде зачувано"
     destroy success: "Ми се допаѓа е избришано"
     destroy failure: "Твоето ми се допаѓа не може да биде избришано"
   comments:
     view all N: "Види ги сите %{count} коментари"
     post comment: "Напиши коментар"
+    create success: "Успех! Твојот коментар е објавен."
     create failure: "Коментарот неможе да се објави"
     destroy success: "Коментарот е избришан"
     destroy failure: "Коментарот не може да биде избришан"
@@ -211,6 +239,7 @@ mk:
   friendships:
     offer success: "Барањето за пријателство е испратено"
     offer failure: "Грешка во испраќањето на барање за пријателство"
+    create success: "Успех! Сега сте пријатели."
     create failure: "Грешка во креирањето пријателство"
     destroy success: "Барањето е одбиено"
     destroy failure: "Грешка во одбивањето барање"
@@ -276,6 +305,7 @@ mk:
     cancel: "Откажи"
     pop out: "Истави"
     none found: "Не најдовме белешки..."
+    create success: "Успех! Твојата белешка е зачувана."
     create failure: "Грешка во зачувување на белешката"
     destroy success: "Белешката е избришана"
     destroy failure: "Грешка во бришење на белешката"
@@ -507,6 +537,7 @@ mk:
       friendships: "Известувај ме за покани за пријателство"
       moments: "Известувај ме за активност на пријателите"
       comments: "Известувај ме за коментари на моите активности"
+      likes: "Информирај ме за лајковите на моите активности"
   bookmarks:
     new: "Нов обележувач"
     edit: "Уреди"
@@ -520,6 +551,7 @@ mk:
     not found: "Обележувачите овозможуваат брз пристап до омилените пасуси или до последното поглавје што го читаш во некоја книга од Библијата. За да создадеш обележувач, избери стих во читачот на Библијата што го користиш и кликни на копчето \"Селектирано\" на врвот од читачот."
     other user not found: "%{username} се уште нема зачувано обележувачи."
     creation form errors: "Следниве грешки го спречија создавањето обележувач:"
+    create success: "Успех! Твојот обележувач е зачуван."
     destroy success: "Обележувачот е отстранет"
     destroy failure: "Грешка при бришење на обележувач"
     update success: "Обележувачот е ажуриран"
@@ -704,6 +736,7 @@ mk:
       description: "Додека ја читаш Библијата, избери стих и нагласи го. Врати се овде да погледнеш, редактираш или избришеш нагласување."
     none user: "%{username} нема нагласувања"
     choose color: "Избери боја"
+    create success: "Успех! Твојот нагласувач е зачуван."
     create failure: "Грешка при снимање на нагласувањето"
     destroy success: "Нагласувањето е избришано"
     destroy failure: "Грешка при бришење на нагласување"
