--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -1,5 +1,29 @@
 tl:
   social:
+    intro page:
+      main heading: "Paguusap & Pagkakatuklas"
+      main description: "Bagong paraan ng pagtuklas sa Bibliya kasama ang mga pinagkakatiwalaang kaibigan"
+      moment:
+        timestamp: "5 araw na nakaraan"
+        title: "nilagyan ng pananda ang Mga Awit 31:7"
+        verse: "Matutuwa ako at magagalak,\ndahil sa pag-ibig mong wagas.\nPaghihirap ko'y iyong nakikita,\nalam mo ang aking pagdurusa."
+        reference: "Mga Awit 31:7"
+        discover:
+          copy: "Tumuklas at mag-aral kasama ng mga kaibigan gamit ang mga haylayt, pananda at tala. "
+          button: "Saan ako maaring magsimula?"
+        share:
+          copy: "Magbahagi ng mga tapat na pag-uusap gamit ang Bibliya."
+          button: "Magsimula sa pagdadagdag ng mga kaibigan."
+        likes:
+          info: "at 4 pa ang may gusto"
+        comments:
+          first:
+            text: "Magandang narinig ko iyan ngayon, salamat. Magkita tayo!"
+            time: "mga 3 oras ang nakaraan"
+          second:
+            text: "Amen, ako din. May email ako sa'yo ngayon."
+            time: "mga 27 minuto ang nakaraan"
+          field placeholder: "Magsulat ng komento..."
     share: "Ibahagi"
     my connections: "Mga Kaugnay na Accounts"
     connected as: "Ikaw ay konektado sa %{connection} bilang %{username}."
@@ -142,6 +166,7 @@ tl:
   last page: "Huling Pahina"
   invalid username or password: "Username o password ay invalid."
   show all bookmarks: "Tingnan lahat ang %{total} na bookmarks"
+  show all notes: "Tingnan ang lahat ng tala"
   recent bookmarks: "Pinakahuling Mga Bookmarks"
   percentage display: "%{number}%"
   myself: "Ako"
@@ -170,6 +195,7 @@ tl:
       like: "Gustuhin"
       liked: "Sumang-ayon"
       like title: "Gustuhin ito"
+      last comment: "Huling komento"
       share: "Ibahagi"
       share title: "Ibahagi sa iyong mga kaibigan o pamilya"
       comment: "Magkomento"
@@ -189,12 +215,14 @@ tl:
     no new: "Walang mga bagong abiso"
     view all: "Tingnan lahat ng mga abiso"
   likes:
+    create success: "Tagumpay! Na-save ang pagka-gusto."
     create failure: "Hindi maisave ang page-like"
     destroy success: "Ang page-like ay tinanggal"
     destroy failure: "Any page-like ay hindi maaaring tanggalin"
   comments:
     view all N: "Tingnan %{count} mga komento"
     post comment: "Magpaskil ng komento"
+    create success: "Tagumpay! Naipaskil ang komento."
     create failure: "Ang komento ay hindi maipaskil"
     destroy success: "Any moments ay tinanggal"
     destroy failure: "Hindi matanggal ang komento"
@@ -211,6 +239,7 @@ tl:
   friendships:
     offer success: "Naipadala ang hiling na maging magkaibigan"
     offer failure: "May naging pagkakamali sa pagpapadala ng hiling na maging magkaibigan"
+    create success: "Tagumpay! Kayo ay magkaibigan na."
     create failure: "May naging pagkakamali sa paggiging magkaibigan"
     destroy success: "Tinanggihan ang kahilingan"
     destroy failure: "May naging pagkakamali sa pagtanggi sa kahilingan"
@@ -276,6 +305,7 @@ tl:
     cancel: "I-cancel"
     pop out: "Pop out"
     none found: "Walang makitang mga tala..."
+    create success: "Tagumpay! Na-save ang tala."
     create failure: "May pagkakamali sa pag-save ng tala"
     destroy success: "Ang tala ay nabura na"
     destroy failure: "May pagkakamali sa pagbura ng tala"
@@ -507,6 +537,7 @@ tl:
       friendships: "Ipagbigay-alam sa akin kapag may mga hiling na maging magkaibigan"
       moments: "Ipagbigay-alam sa akin ang mga gawain ng aking mga kaibigan"
       comments: "Ipagbigay-alam sa akin ang mga komento sa aking mga gawain"
+      likes: "Sabihan ako tungkol sa pagkagusto sa mga gawain ko"
   bookmarks:
     new: "Bagong Bookmark"
     edit: "I-edit"
@@ -520,6 +551,7 @@ tl:
     not found: "Ang mga bookmark ay nagbibigay sa iyo ng madaliang reference guide sa mga paborito mong talata o sa huling kabanata ng Bibliya na binasa mo. Upang magdagdag ng bookmark, pumili ng talata sa Bible reader at piliin ang Selected button sa ibabaw ng reader."
     other user not found: "%{username} ay hindi pa naka-save ng bookmark."
     creation form errors: "Ang sumusunod na (mga) pagkakamali ay balakid sa paggawa ng iyong bookmark: "
+    create success: "Tagumpay! Na-save na bookmark."
     destroy success: "Tinanggal na Bookmark"
     destroy failure: "May pagkakamali sa pagtanggal ng bookmark"
     update success: "Nabagong Bookmark"
@@ -564,7 +596,7 @@ tl:
     all: "Lahat"
     all plans: "Lahat ng Plans"
     all category plans: "Lahat ng %{category} Plans"
-    my plans: "Aking Mga Plano"
+    my plans: "Mga Plano Ko"
     none found: "Hindi kami makahanap ng plano na angkop sa iyong piniling criteria. Subukang palawakin pa ang paghahanap."
     about publisher: "Tungkol sa Naglathala"
     overview: "Overview ng Plan"
@@ -620,7 +652,7 @@ tl:
     calendar: "Kalendaryo"
     search members placeholder: "Maghanap ng miyembro ng YouVersion "
     search members: "Hanapin"
-    email_on: "Buksan ang Delivery"
+    email_on: "Paganahin"
     email_off: "Patayin ang Delivery"
     email delivery text: "Buksan ang email delivery upang matanggap ang iyong araw-araw na reading plan content sa iyong inbox. Pumili ng oras  kung kailan mo gustong matanggap ang email at ang bersyon ng Bibliya na angkop para sa iyo."
     email delivery: "Email Delivery"
@@ -704,6 +736,7 @@ tl:
       description: "Habang nagbabasa ng Bibliya, pumili ng talata at lagyan ito ng haylayt. Bumalik dito para tingnan, baguhin, o alisin ang haylayt."
     none user: "Walang mga haylayt si %{username}"
     choose color: "Pumili ng Kulay"
+    create success: "Tagumpay! Na-save ang haylayt."
     create failure: "May mali sa pag-save ng haylayt"
     destroy success: "Nabura ang haylayt"
     destroy failure: "May mali sa pagbura ng haylayt"
